--- a/we-care.html
+++ b/we-care.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WE CARE</title>
+    <title>WE CAREE</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,6 +15,7 @@
 
 <body>
     <header class="cabeçadosite">
+        
         <a class="link-header">Home</a>
         <a class="link-header">About</a>
         <a class="link-header">Product</a>
